# samosa

./: .gitignore  .travis.yml  README.md  oauth_getkey.py  requirements.txt  setup.cfg
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
etc/: creds-sample.conf  samosa-sample.conf
samosa/: __init__.py  app.py
samosa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
samosa/ui/: leaderboard.html
samosa/utils/: json_utils.py  redis_utils.py
samosa/workers/: worker.py
