[metadata]
name = samosa
version = 0.1
summary = Leaderboard for all Fitness Tracking Devices
description-file =
    README.md
author = Balaji Iyer, Sriram Madapusi Vasudevan
home-page = https://github.com/balajiiyer/samosa
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Apache License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    samosa
